aws/security_group_all.tf
resource "aws_security_group" "allow_all" {
  name        = "allow-all"
  description = "Allow all traffic for Kubernetes cluster"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
